--- a/MBA.ipynb
+++ b/MBA.ipynb
@@ -5,48 +5,122 @@
    "execution_count": 1,
    "id": "565ed505-5383-4744-8744-3e2885a0d7dc",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install mlxtend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "79f834bc-4452-4304-9da8-d399887be20c",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting mlxtend\n",
-      "  Downloading mlxtend-0.23.0-py3-none-any.whl (1.4 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: matplotlib>=3.0.0 in /home/ariel/.local/lib/python3.10/site-packages (from mlxtend) (3.7.3)\n",
-      "Collecting scikit-learn>=1.0.2\n",
-      "  Downloading scikit_learn-1.3.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (10.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.8/10.8 MB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.16.2 in /home/ariel/.local/lib/python3.10/site-packages (from mlxtend) (1.25.2)\n",
-      "Requirement already satisfied: pandas>=0.24.2 in /home/ariel/.local/lib/python3.10/site-packages (from mlxtend) (2.1.0)\n",
-      "Collecting joblib>=0.13.2\n",
-      "  Downloading joblib-1.3.2-py3-none-any.whl (302 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.2/302.2 KB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting scipy>=1.2.1\n",
-      "  Downloading scipy-1.11.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (36.4 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m36.4/36.4 MB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pyparsing>=2.3.1 in /usr/lib/python3/dist-packages (from matplotlib>=3.0.0->mlxtend) (2.4.7)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (1.1.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (4.42.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (1.4.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (2.8.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (10.0.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/ariel/.local/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend) (23.1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /home/ariel/.local/lib/python3.10/site-packages (from pandas>=0.24.2->mlxtend) (2023.3)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/ariel/.local/lib/python3.10/site-packages (from pandas>=0.24.2->mlxtend) (2023.3.post1)\n",
-      "Collecting threadpoolctl>=2.0.0\n",
-      "  Downloading threadpoolctl-3.2.0-py3-none-any.whl (15 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend) (1.16.0)\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn, mlxtend\n",
-      "Successfully installed joblib-1.3.2 mlxtend-0.23.0 scikit-learn-1.3.1 scipy-1.11.3 threadpoolctl-3.2.0\n"
+      "\u001b[33mhint: Using 'master' as the name for the initial branch. This default branch name\u001b[m\n",
+      "\u001b[33mhint: is subject to change. To configure the initial branch name to use in all\u001b[m\n",
+      "\u001b[33mhint: of your new repositories, which will suppress this warning, call:\u001b[m\n",
+      "\u001b[33mhint: \u001b[m\n",
+      "\u001b[33mhint: \tgit config --global init.defaultBranch <name>\u001b[m\n",
+      "\u001b[33mhint: \u001b[m\n",
+      "\u001b[33mhint: Names commonly chosen instead of 'master' are 'main', 'trunk' and\u001b[m\n",
+      "\u001b[33mhint: 'development'. The just-created branch can be renamed via this command:\u001b[m\n",
+      "\u001b[33mhint: \u001b[m\n",
+      "\u001b[33mhint: \tgit branch -m <name>\u001b[m\n",
+      "Initialized empty Git repository in /mnt/c/Users/ariel/OneDrive/personalProjs/.git/\n"
      ]
     }
    ],
    "source": [
-    "!pip install mlxtend"
+    "!git init"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3297527e-5ef7-4e9d-9aa3-80ce5938bd47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add MBA.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5728fa25-1e71-42a4-a78e-15d6c4714098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) 79f307e] first commit\n",
+      " 1 file changed, 73 insertions(+)\n",
+      " create mode 100644 MBA.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"first commit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ebe86fc3-e04d-420e-8dd9-ec335da5da09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error: remote origin already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote add origin https://github.com/MBA/arielharris.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9322253b-57ae-4813-9ac3-674c8ebbeee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username for 'https://github.com': "
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6046d87-0d58-4f02-881e-e6796d947374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arielharris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace02794-2755-4c42-8df7-0b994e321907",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
